resolving some styling issues such as registration form overlapping background container

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -103,14 +103,14 @@ body {
 }
 
 .mainBox {
-  padding: 5px;
+  padding: 20px;
   display: block;
   width: 700px;
-  height: 60%;
+  height: auto;
   background-color: white;
   position: absolute;
   top: 15%;
-  border-radius: 10px;
+  // border-radius: 5px;
   left: calc(50% - 350px);
   opacity: 1;
   z-index: 101;
@@ -120,7 +120,16 @@ body {
   display: block;
   width: 100vw;
   height: calc(100vh - 68px);
-  background-image: url('http://i.imgur.com/Ul4j6Dl.gif');
+  // background-image: url('http://i.imgur.com/Ul4j6Dl.gif');
+  // $angle: 45deg;
+  // $lineColor: #f00;
+  // $lineThickness: 5px;
+  // $lineSpacing: 25px;
+  // $backgroundColor: #FFF;
+  //
+  // background: linear-gradient(to top, $backgroundColor 0, rgba($backgroundColor, 0) 100%), repeating-linear-gradient($angle, $lineColor 0, $lineColor $lineThickness, $backgroundColor 0, $backgroundColor $lineSpacing+$lineThickness);
+  background-image: linear-gradient(to bottom, #ffffff, $primarybrand);
+  height: 100vh;
   background-size: cover;
   color: white;
   position: absolute;
@@ -148,6 +157,7 @@ main {
   vertical-align: top;
   float: right;
   padding: 10px;
+  width: 50%;
 }
 
 .about {
@@ -156,7 +166,7 @@ main {
   padding: 10px;
   float: left;
   display: block;
-  width: 70%;
+  width: 50%;
   background-color: white;
   position: sticky;
   top: 15%;
@@ -208,7 +218,7 @@ button {
   border: none;
   background-color: $primarybrand;
   color: white;
-  border-radius: 3px;
+  // border-radius: 3px;
   text-align: center;
   font-family: $font-stack;
   font-weight: 700;
@@ -277,11 +287,21 @@ button {
       width:100%;
   }
   .about {
-    width:100%;
+    display: none;
+    // width:100%;
   }
+
   .mainBox {
     width:100%;
+    padding: 0;
+    left: 0;
   }
+  main {
+    width:100%;
+  }
+
+
+
   .navbar {
     img{
       &#logo {
